# cloud-tech-webapp

./: .env.example  .env.sample  .gitignore  AMPLIFY_DEPLOYMENT_GUIDE.md  BUILD_IMPROVEMENTS.md  DEPLOYMENT.md  DYNAMIC_FEATURES.md  Dockerfile  FINAL_UPDATES.md  FIXES.md  README.md  RECENT_UPDATES.md  amplify.yml  appspec.yml  build.sh  buildspec.yml  deploy-amplify.sh  deploy.sh  docker-compose.yaml  docker-compose.yml  manage.py  next.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.js
cloudtech_project/: asgi.py  celery_app.py  settings.py  storage_backends.py  urls.py  urls_public.py  wsgi.py
community/: admin.py  models.py
community/migrations/: 0001_initial.py  0002_community_add_blog_community_add_discussion_and_more.py  0002_community_add_newsletter.py  0002_tag.py
components/: CommunityStats.tsx  FeaturedContent.tsx  Footer.tsx  Header.tsx  Hero.tsx  Newsletter.tsx  NewsletterSignup.tsx  SearchModal.tsx  UpcomingEvents.tsx
components/about/: AboutHero.tsx  Community.tsx  Mission.tsx  Team.tsx
components/blog/: BlogCategories.tsx  BlogHero.tsx  BlogList.tsx  BlogPostDetail.tsx
content/: admin.py  models.py  tenant_middleware.py
docker/: entrypoint.sh
documentation/: web-app-readme.md
home/: admin.py  models.py  tasks.py  urls.py  views.py
home/forms/: authentication.py  (+3 more)
lib/: analytics.ts  contentful.ts
mixins/: models.py  views.py
pages/: _app.tsx  _document.tsx  about.tsx  contact.tsx  index.tsx
public/: manifest.json  robots.txt
scripts/: before_install.sh  build_run.sh
setup/: documentation.md  documentation.txt
styles/: globals.css
types/: index.ts
web/: admin.py  filter.py  filters.py  forms.py  models.py  urls.py  views.py
(+104 files in other folders)
