[tool.poetry]
name = "cloud-tech-webapp"
version = "0.1.0"
description = ""
authors = ["ishan-modi <ishan.modi@glib.ai>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.1"
django-tenants = "^3.5.0"
psycopg2-binary = "^2.9.6"
pillow = "^9.5.0"
markdown = "^3.4.3"
django-filter = "^23.2"
celery = "^5.3.1"
django-celery-results = "^2.5.1"
django-redis = "^5.3.0"
django-ses = "^3.5.0"
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
